--- a/src/ner/CMakeLists.txt
+++ b/src/ner/CMakeLists.txt
@@ -155,7 +155,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS ner/ner_node.py
+catkin_install_python(PROGRAMS nodes/ner_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 # catkin_install_python(PROGRAMS
