--- a/little_helper_interfaces/package.xml
+++ b/little_helper_interfaces/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ner</name>
-  <version>0.0.1</version>
-  <description>The ner package</description>
+  <name>little_helper_interfaces</name>
+  <version>0.0.0</version>
+  <description>The little_helper_interfaces package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ner</url> -->
+  <!-- <url type="website">http://wiki.ros.org/little_helper_interfaces</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -37,21 +37,18 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
+  <build_depend>message_generation</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
+  <exec_depend>message_runtime</exec_depend>
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
-  <depend>rospy</depend>
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>little_helper_interfaces</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
