--- a/ner/package.xml
+++ b/ner/package.xml
@@ -49,9 +49,9 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <depend>rospy</depend>
+  <depend>little_helper_interfaces</depend>
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>little_helper_interfaces</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
