Modified the ur_e_webots code to enable interfacing with gripper

--- a/ur_e_webots/CMakeLists.txt
+++ b/ur_e_webots/CMakeLists.txt
@@ -2,11 +2,22 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(ur_e_webots)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED genmsg actionlib_msgs message_generation)
 
 catkin_python_setup()
 
-catkin_package()
+add_action_files(
+  DIRECTORY action
+  FILES
+  Gripper.action
+)
+
+generate_messages(
+  DEPENDENCIES
+  actionlib_msgs
+)
+
+catkin_package(CATKIN_DEPENDS message_runtime)
 
 if (CATKIN_ENABLE_TESTING)
   find_package(roslaunch REQUIRED)
