--- a/ur_e_webots/package.xml
+++ b/ur_e_webots/package.xml
@@ -18,6 +18,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <test_depend>roslaunch</test_depend>
   <run_depend>joint_state_controller</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>controller_manager</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
 
 
