Reorganised feature_extractor code and made some changes to code

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@ feature_test/data/
 feature_test/ownDataFeatureExtractor/feature_extractor_P7/
 feature_test/checkpoints/
 feature_test/SpineNet/
+*.pth
+*.png
+*.jpg
