--- a/dialog_flow/package.xml
+++ b/dialog_flow/package.xml
@@ -50,6 +50,8 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <depend>little_helper_interfaces</depend>
+  <exec_depend>std_msgs</exec_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
 
