--- a/dialog_flow/CMakeLists.txt
+++ b/dialog_flow/CMakeLists.txt
@@ -160,7 +160,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS dialog_control/dialog_flow.py
+catkin_install_python(PROGRAMS nodes/dialog_flow.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 # catkin_install_python(PROGRAMS
