--- a/text_to_speech/CMakeLists.txt
+++ b/text_to_speech/CMakeLists.txt
@@ -161,6 +161,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   nodes/tts_node.py
+  nodes/tts_node_azure.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
